--- a/config/x86/Iptables-23.05.config
+++ b/config/x86/Iptables-23.05.config
@@ -183,7 +183,7 @@ CONFIG_TARGET_ROOTFS_PARTSIZE=312
 # CONFIG_PACKAGE_dnsmasq_full_nftset is not set
 # CONFIG_PACKAGE_jansson is not set
 # CONFIG_PACKAGE_nftables-json is not set
-CONFIG_VDI_IMAGES=y
-CONFIG_VMDK_IMAGES=y
+#CONFIG_VDI_IMAGES=y
+#CONFIG_VMDK_IMAGES=y
 # CONFIG_VHDX_IMAGES is not set
-CONFIG_TARGET_IMAGES_GZIP=y
+#CONFIG_TARGET_IMAGES_GZIP=y
