--- a/.github/workflows/openwrt-23.05-x86_Iptables.yml
+++ b/.github/workflows/openwrt-23.05-x86_Iptables.yml
@@ -251,7 +251,7 @@ jobs:
       uses: sdhz151/action-gh-release@master
       if: steps.tag.outputs.status == 'success' && !cancelled()
       env:
-        GITHUB_TOKEN: ${{ secrets.REPO_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         tag_name: ${{ steps.tag.outputs.release_tag }}
         body_path: release.txt
@@ -260,7 +260,7 @@ jobs:
     - name: Delete workflow runs
       uses: Mattraks/delete-workflow-runs@main
       with:
-        token: ${{ secrets.REPO_TOKEN }}
+        token: ${{ secrets.GITHUB_TOKEN }}
         repository: ${{ github.repository }}
      #   delete_workflow_pattern: X86_openwrt-24.10_Iptables
         retain_days: 0
@@ -274,4 +274,4 @@ jobs:
         keep_latest: 4
         delete_tags: true
       env:
-        GITHUB_TOKEN: ${{ secrets.REPO_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
